--- a/Games&Apps.html
+++ b/Games&Apps.html
@@ -38,10 +38,6 @@
                     <div class="search">
                         <input type="text" placeholder="search site"/>
                     </div>
-                    <!--Logo-->
-                    <div class="nav-img">
-                        <img src="" alt="navigation bar image" height="50">
-                    </div><!--End of logo-->
                 </ul>
             </div>
         </div>
@@ -98,9 +94,9 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/Hunter-x-Hunter-Cover.jpg" height="350" width="100%">
+                        <img src="images/The croods.jpg" height="350" width="100%">
                         <div class="movie-info">
-                            <h3>hunterIV</h3>
+                            <h3>hthe croodsV</h3>
                             <p>2021</p>
                         </div>
                     </div>
@@ -133,9 +129,9 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/play store.png" height="350" width="100%">
+                        <img src="images/Sport iOS App Icon.jpeg" height="350" width="100%">
                         <div class="movie-info">
-                            <h3>Play store</h3>
+                            <h3>sport</h3>
                         </div>
                     </div>
                     <div class="card">
