--- a/Tvshows.html
+++ b/Tvshows.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!--Favicon icon-->
-    <link rel="shortcut icon" href="img/Warner Bros.png">
+    <link rel="shortcut icon" href="images/backgroundImage.jpg">
 
     <title>TV Shows</title>
     
@@ -37,10 +37,8 @@
                     <div class="search">
                         <input type="text" placeholder="search site"/>
                     </div>
-                    <!--Logo-->
-                    <div class="nav-img">
-                        <img src="img/Warner Bros.png" alt="navigation bar image" height="350" width="100%">
-                    </div><!--End of logo-->
+
+
                 </ul>
             </div>
         </div>
@@ -81,9 +79,9 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/Carol.jpg" height="350" width="100%">
+                        <img src="images/blue beetle.jpg" height="350" width="100%">
                         <div class="movie-info">
-                            <h3>carol</h3>
+                            <h3>blue beetle</h3>
                             <div class="row">
                                 <div class="card1">
                                     <p>Year: 2020</p>
@@ -117,9 +115,9 @@
                 <h1 style="color: #000;"><b>New <span style="color: red;">Series</span>
                 <div class="row card-home">
                     <div class="card">
-                        <img src="images/BRAVEN.jpg" height="345" width="100%">
+                        <img src="images/COMEDYTV.jpeg" height="345" width="100%">
                         <div class="movie-info">
-                            <h3>Abraven</h3>
+                            <h3>comedy</h3>
                             <div class="row">
                                 <div class="card1">
                                     <p>Year: 2012</p>
@@ -131,9 +129,9 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/GIRL FIGHT.jpg" height="300" width="100%">
+                        <img src="images/Stranger Things.jpeg" height="300" width="100%">
                         <div class="movie-info">
-                            <h3>girl fight/h3>
+                            <h3>stranger things/h3>
                             <div class="row">
                                 <div class="card1">
                                     <p>Year: 2023</p>
@@ -159,9 +157,9 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="images/DRIVE ME CRAZY.jpg" height="300" width="100%">
+                        <img src="images/Naruto-Cover.jpg" height="300" width="100%">
                         <div class="movie-info">
-                            <h3>drive me crazy</h3>
+                            <h3>Naruto</h3>
                             <div class="row">
                                 <div class="card1">
                                     <p>Year: 2022</p>
