--- a/feedback.html
+++ b/feedback.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!--Favicon icon-->
-    <link rel="shortcut icon" href="img/Warner Bros.png">
+    <link rel="shortcut icon" href="images/backgroundImage.jpg">
     
     <title>Feedback</title>
 </head>
@@ -36,10 +36,6 @@
                     <div class="search">
                         <input type="text" placeholder="search site"/>
                     </div>
-                    <!--Logo-->
-                    <div class="nav-img">
-                        <img src=" alt="navigation bar image" height="50">
-                    </div><!--End of logo-->
                 </ul>
             </div>
         </div>
@@ -77,9 +73,6 @@
        <section id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="card1">
-                        <small></small>
-                    </div>
                     <div class="card1">
                         <small>M & © 2023 Warner Bros. Entertainment Inc. All rights reserved</small>
                     </div>
