--- a/movie.html
+++ b/movie.html
@@ -20,7 +20,7 @@
     <title>Warner Bros</title>
     
 </head>
-<body>
+<section>
     <!--Navigation bar-->
     <section id="nav">
         <div class="main">
@@ -43,7 +43,7 @@
     </section><!--End of Navigation bar-->
     
     <!--Movies-->
-    <section id="body">
+    <section id="main">
         <section>
             <div class="container">
                 <h1 style="color: #000;"><b>Action <span>
@@ -112,7 +112,7 @@
 
         <section>
             <div class="container">
-                <h1 style="color: #000;"><b>Latest <span style="color: red;">movies</span></b></h1>
+                <h1 style="color: #000;"><b>Romance <span style="color: red;">movies</span></b></h1>
                 <div class="row card-home">
                     <div class="card">
                         <img src="images/LOVE AGAIN.jpg" height="350" width="100%">
@@ -145,9 +145,9 @@
                     </div>
 
                     <div class="card">
-                        <img src="images/30 Days.jpg" height="350" width="100%">
+                        <img src="images/FAMILYTIME.jpeg" height="350" width="100%">
                         <div class="movie-info">
-                            <h3>30 DAYS</h3>
+                            <h3>FAMILYTIME</h3>
                         <div class="row">
                             <div class="card1">
                                 <p>Year: 2022</p>
@@ -160,9 +160,9 @@
                     </div>
 
                     <div class="card">
-                        <img src="images/Gossip Girl.jpeg" height="350" height="350" width="100%">
+                        <img src="images/REDEEMING LOVE.jpg" height="350" height="350" width="100%">
                         <div class="movie-info">
-                            <h3>Gossip Girl</h3>
+                            <h3>REDEEMING LOVE</h3>
                         <div class="row">
                             <div class="card1">
                                 <p>Year: 2022</p>
@@ -183,9 +183,9 @@
                 <h1 style="color: #000;"><b>Sci-Fi <span style="color: red;">movies</span></b></h1>
                 <div class="row card-home">
                     <div class="card">
-                        <img src="images/ANGEL HAS FALLEN.jpg" height="350" width="100%">
+                        <img src="images/BOLT2.jpg" height="350" width="100%">
                         <div class="movie-info">
-                            <h3>ANGEL HAS FALLEN</h3>
+                            <h3>Bolt2</h3>
                         <div class="row">
                             <div class="card">
                                 <p>Year: 2012</p>
@@ -213,9 +213,9 @@
                     </div>
 
                     <div class="card">
-                        <img src="images/Annabelle-Comes-Home-2019-cover.jpg" height="350" width="100%">
+                        <img src="images/Arrow-cover.jpg" height="350" width="100%">
                         <div class="movie-info">
-                            <h3>Annabelle-Comes-Home</h3>
+                            <h3>Arrowe</h3>
                         <div class="row">
                             <div class="card">
                                 <p>Year: 2023</p>
