--- a/collection.html
+++ b/collection.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
 
     <!--Favicon icon-->
-    <link rel="shortcut icon" href="img/Warner Bros.png">
+    <link rel="shortcut icon" href="images/backgroundImage.jpg">
 
     <title>Collections</title>
     
@@ -37,10 +37,6 @@
                     <div class="search">
                         <input type="text" placeholder="search site"/>
                     </div>
-                    <!--Logo-->
-                    <div class="nav-img">
-                        <img src="" alt="navigation bar image" height="50">
-                    </div><!--End of logo-->
                 </ul>
             </div>
         </div>
@@ -67,9 +63,9 @@
                     </div>
                     </div>
                     <div class="card">
-                        <img src="images/HALLOW.jpeg" height="350" width="100%">
+                        <img src="images/FRIGHT NIGHT.jpg" height="350" width="100%">
                         <div class="movie-info">
-                                <h3>HALLOW</h3>
+                                <h3>FRIGHT nightS</h3>
                             <div class="row">
                                 <div class="card1">
                                     <p>Year: 2022</p>
