--- a/index.html
+++ b/index.html
@@ -36,12 +36,7 @@
                 </li>
                     <div class="search">
                 <input type="text" placeholder="search site"/>
-            </div>
-            <!--Logo-->
-            <div class="nav-img">
-                <img src="images/" alt="navigation bar image" height="550" width="100%">
-
-            </div><!--End of logo-->
+                    </div>
             </ul>
         </div>
     </div>
@@ -66,24 +61,20 @@
             <h1 style="color: black;"></h1>
             <div class="row card-home">
                 <div class="card">
-                    <img src="images/barbie.jpg" height="350" width="100%">
+                    <img src="images/barbie.jpg" height="300" width="100%">
                     <h3>Barbie</h3>
-                    <p>10/09/2023</p>
                 </div>
                 <div class="card">
-                    <img src="images/bad sport.png" height="350" width="100%">
+                    <img src="images/bad sport.png" height="300" width="100%">
                     <h3>Bad Sport</h3>
-                    <p>2021</p>
                 </div>
                 <div class="card">
-                    <img src="images/CAUGHT BY A WAVE.png" height="350" width="100%">
-                    <h3>Wave</h3>
-                    <p>2021</p>
+                    <img src="images/demon-slayerposter.jpg" height="300" width="100%">
+                    <h3>DEMON</h3>
                 </div>
                 <div class="card">
-                    <img src="images/Central-Intelligence-2016-cover.jpg" height="350" width="100%">
-                    <h3>Intelligence</h3>
-                    <p>2021</p>
+                    <img src="images/Wednesday.jpeg" height="300" width="100%">
+                    <h3>Wednesday</h3>
                 </div>
             </div>
         </div>
@@ -91,19 +82,20 @@
 
     <section>
         <div class="container">
-            <h1 style="color:black;"><b>Movies</b></h1>
+            <h1 style="color:black;"><b>Movies <a href="movie.html"></a></b></h1>
             <div class="row card-home">
                 <div class="card">
-                    <img src="images/A CIVIL ACTION.jpg" height="350" width="100%">
+                   <img src="images/A CIVIL ACTION.jpg" height="300" width="100%">
+
                 </div>
                 <div class="card">
-                    <img src="images/AVATAR.jpg" height="350" width="100%">
+                    <img src="images/AVATAR.jpg" height="300" width="100%">
                 </div>
                 <div class="card">
-                    <img src="images/Black-Panther-2018-cover.jpg" height="350" width="100%">
+                    <img src="images/Black-Panther-2018-cover.jpg" height="300" width="100%">
                 </div>
                 <div class="card">
-                    <img src="images/After Life (TV series).jpeg" height="350" width="100%">
+                    <img src="images/After Life (TV series).jpeg" height="300" width="100%">
                 </div>
             </div>
         </div>
